# ai_construction_estimate

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  app.py  config.py  construction_estimation_app.py  construction_estimation_app_v2.py  construction_estimation_app_v3.py  construction_estimation_app_v4.py  pyproject.toml  requirements.txt  sample_measurements.yaml  sample_work_scopes.json
core/: __init__.py  data_mapper.py  file_handler.py  ocr_service.py
data/: construction_estimation.db
docs/: API_SPECIFICATION.md  BUILD_SUMMARY.md  DATABASE_DESIGN.md  IMPLEMENTATION_GUIDE.md  MEASUREMENT_EXTRACTION_README.md  MIGRATION_PLAN.md  PACKAGE_DESIGN.md  SECURE_CREDENTIALS_GUIDE.md  SYSTEM_DESIGN.md
managers/: __init__.py  processing_manager.py  session_manager.py  test_managers.py  validation_manager.py
services/: __init__.py  estimator_service.py
src/core/: config.py  credentials.py
src/models/: __init__.py  database.py  room_measurement.py  work_scope.py
src/services/: __init__.py  project_service.py
src/services/data/: __init__.py  persistence.py
src/services/estimation/: __init__.py  measurement_extractor.py
src/services/measurement/: __init__.py  construction_parser.py  extraction_service.py  output_formatter.py  yaml_formatter.py
tests/: conftest.py
tests/unit/: test_simple.py
tests/unit/core/: test_core.py
tests/unit/services/: test_data_service.py
ui/: __init__.py  components.py  handlers.py  interface.py  styles.py
