[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construction-estimator"
version = "1.0.0"
description = "Construction Estimator with OCR and Mapping"
authors = [
    {name = "Construction Estimator Team", email = "team@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "gradio>=3.0.0",
    "easyocr>=1.6.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "pytest>=6.0.0",
]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/migrations/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

[tool.flake8]
ignore = [
    "E305",  # expected 2 blank lines after class or function definition
    "E501",  # line too long
    "W503",  # line break before binary operator
    "F401",  # imported but unused
    "E203",  # whitespace before ':'
    "W504",  # line break after binary operator
]
max-line-length = 120
max-complexity = 10
select = ["E", "W", "F", "C"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    "migrations",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"